# molax

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  concepts.html  env.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.html  setup.sh  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: acquisition.html  data.html  metrics.html  models.html
datasets/: esol.csv  molecules.csv
docs/: concepts.md  index.md  roadmap.md
docs/api/: acquisition.md  data.md  metrics.md  models.md
docs/assets/css/: custom-splito.css
example/: simple_active_learning.py
examples/: acquisition_strategies_demo.py  active_learning_benchmark.py  calibration_comparison.py  ensemble_active_learning.py  evidential_active_learning.py  gat_demo.py  graph_transformer_demo.py  mpnn_demo.py  simple_active_learning.py  uncertainty_gcn_demo.py
molax/: __init__.py  _version.py
molax/acquisition/: __init__.py  bald.py  batch_aware.py  coreset.py  expected_change.py  uncertainty.py
molax/metrics/: __init__.py  calibration.py  visualization.py
molax/models/: __init__.py  ensemble.py  evidential.py  gat.py  gcn.py  graph_transformer.py  mpnn.py
molax/utils/: __init__.py  data.py  logger.py
scripts/: download_esol.py
search/: search_index.json
src/: version.py
src/acquisition/: __init__.py
src/models/: __init__.py  gcn.py
tests/: test_acquisition.py  test_bald.py  test_batch_aware.py  test_calibration.py  test_coreset.py  test_ensemble.py  test_evidential.py  test_expected_change.py  test_gat.py  test_gcn.py  test_gcn_layer.py  test_graph_transformer.py  test_molecular_gcn.py  test_mpnn.py  test_uncertainty_gcn.py
