# ruff: noqa
[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "molax"
dynamic = ["version"]
description = "Molecular active learning with JAX"
authors = [
    {name = "Hossein Fooladi", email = "hossein.fooladi@gmail.com"},
]
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "rdkit",
    "pandas",
    "numpy",
    "tqdm",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]



[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.291",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["molax"]

[tool.hatch.version]
source = "vcs"
path = "molax/_version.py"

[tool.hatch-vcs]
version-file = "molax/_version.py"
tag-pattern = "v[0-9]*"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[project.urls]
Homepage = "https://github.com/hfooladi/molax"
Repository = "https://github.com/hfooladi/molax"
Documentation = "https://github.com/hfooladi/molax#readme"
"Bug Tracker" = "https://github.com/hfooladi/molax/issues"
