# ruff: noqa
# Installation:
#   pip: pip install -e .
#   uv:  uv pip install -e .
#   Development mode: pip install -e .[dev]
#   With uv: uv pip install -e .[dev]
#
# Using uv (recommended for faster installs):
#   1. Install uv: curl -LsSf https://astral.sh/uv/install.sh | sh
#   2. Create virtual environment: uv venv
#   3. Activate: source .venv/bin/activate (Linux/Mac) or .venv\Scripts\activate (Windows)
#   4. Install package: uv pip install -e .[dev]

[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "molax"
dynamic = ["version"]
description = "Molecular active learning with JAX"
authors = [
    {name = "Hossein Fooladi", email = "hossein.fooladi@gmail.com"},
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.12.0",
    "optax>=0.1.7",
    "jraph>=0.0.6.dev0",
    "rdkit>=2022.09.1",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]



[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["molax"]

[tool.hatch.version]
source = "vcs"
path = "molax/_version.py"

[tool.hatch-vcs]
version-file = "molax/_version.py"
tag-pattern = "v[0-9]*"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[project.urls]
Homepage = "https://github.com/hfooladi/molax"
Repository = "https://github.com/hfooladi/molax"
Documentation = "https://github.com/hfooladi/molax#readme"
"Bug Tracker" = "https://github.com/hfooladi/molax/issues"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0",
    "pre-commit>=3.0.0",
]
